--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,12 +2,12 @@
 <html lang="en" data-critters-container>
 <head>
   <meta charset="utf-8">
-  <title>Bank JIBI</title>
+  <title>Bank TJIBI</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, user-scalable=no">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
   <link href="https://fonts.cdnfonts.com/css/helvetica-neue-5" rel="stylesheet">
-
+  <link rel="shortcut icon" href="./assets/media/logo-app.png" type="image/x-icon">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
